--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,46 @@ body {
     background-color: #FFFFFF;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .link {
     text-decoration: none;
 }
 
 .list {
     list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.header {
+    padding-top: 24px;
+    padding-left: 24px;
+}
+
+.header-container {
+    display: flex;
 }
 
 .header-logo {
@@ -29,10 +63,24 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--button-text-color);
+    margin-right: 76px;
 }
 
 .logo-part {
     color: var(--second-text-color);
+}
+
+
+.header-navig {
+    display: flex;
+    flex-grow: 1;
+}
+
+.header-menu {
+    display: flex;
+    min-width: 261px;
+    margin-left: 76px;
+    gap: 40px;
 }
 
 .header-menu-link {
@@ -43,20 +91,29 @@ body {
     letter-spacing: 0.02em;
     color: var(--second-text-color);
 }
+
 .header-menu-link:hover,
-.header-menu-link:focus{
-color: #404bbf;
+.header-menu-link:focus {
+    color: #404bbf;
 }
 
-.header-address{
- font-style: normal;   
+.header-address {
+    font-style: normal;
+    
 }
+.address-list{
+display: flex;
+gap: 40px;
+ }
+
 .header-address-link {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    display: flex;
+    gap: 40px;
 }
 
 .header-address-link:hover,
@@ -66,8 +123,12 @@ color: #404bbf;
 
 .hero {
     background-color: #2E2F42;
+    padding-top: 188px;
+    padding-bottom: 48px;
 }
-
+.hero-container{
+flex-direction: column;
+}
 .hero-title {
     font-style: normal;
     font-weight: 700;
@@ -76,10 +137,17 @@ color: #404bbf;
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 496px;
+    
 }
 
 
 .hero-btn {
+    min-width: 169px;
+    height: 56px;
     font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 500;
@@ -89,6 +157,13 @@ color: #404bbf;
     color: var(--main-text-color);
     background-color: #4D5AE5;
     cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 4px;
+    border-radius: 4px;
+    border: none;
+    display: block;
+    margin: 0 auto;
 }
 
 .hero-btn:hover,
@@ -97,6 +172,16 @@ color: #404bbf;
 }
 
 
+.service-item{
+    width: 264px;
+}
+
+.service-list{
+   display: flex;
+   padding-left: 15px;
+   padding-right: 15px; 
+   gap: 24px;
+}
 .service-name {
     font-style: normal;
     font-weight: 500;
@@ -104,6 +189,7 @@ color: #404bbf;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
+    margin-bottom: 8;
 }
 
 .service-item-text {
@@ -124,14 +210,30 @@ color: #404bbf;
     text-align: center;
     text-transform: capitalize;
     color: var(--second-text-color);
+    margin-top: 120px;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+ }
+.mesenger-list{
+    display: flex;
+    gap: 24px;
+    padding-bottom: 120px;
 }
 
 .people {
-background-color: #F4F4FD;
+    background-color: #F4F4FD;
 }
-.people-item{
-background-color: #FFFFFF;
+
+.people-item {
+    background-color: #FFFFFF;
+    
 }
+.people-list{
+    display: flex;
+    gap: 24px;
+}
+
 .people-title {
     font-style: normal;
     font-weight: 700;
@@ -141,6 +243,12 @@ background-color: #FFFFFF;
     text-align: center;
     text-transform: capitalize;
     color: var(--second-text-color);
+    text-align: center;
+    margin-top: 120px;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .people-name {
@@ -150,6 +258,9 @@ background-color: #FFFFFF;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
+    text-align: center;
+    margin-bottom: 8px;
+    
 }
 
 .people-text {
@@ -159,10 +270,20 @@ background-color: #FFFFFF;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    text-align: center;
+    
+}
+.container-img{
+    padding: 32px 16px;
 }
 
 .footer {
     background-color: #2e2f42;
+    padding-top: 100px;
+    padding-left: 100px;
+}
+.footer-container{
+    flex-direction: column;
 }
 
 .footer-logo {
@@ -174,6 +295,8 @@ background-color: #FFFFFF;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--button-text-color);
+    display: inline-block;
+    margin-bottom: 17,5px;
 }
 
 .footer-logo-part {
@@ -187,9 +310,17 @@ background-color: #FFFFFF;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    max-width: 264px;
 }
 
 
+.portfolio-list{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 72px;
+    gap: 24px;
+    border-radius: 4px;
+}
 
 .portfolio-btn {
     font-family: 'Roboto', sans-serif;
@@ -209,12 +340,26 @@ background-color: #FFFFFF;
     background-color: #404BBF;
 }
 
+.portfolio-list-name{
+    
+}
+.portfolio-list-img{
+    display: flex;
+    row-gap: 48px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
 .portfolio-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
+    margin-top: 0;
+    padding-left: 16px;
+    margin-bottom: 8px;
 }
 
 .portfolio-item-text {
@@ -223,4 +368,6 @@ background-color: #FFFFFF;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    margin-top: 8px;
+    padding-left: 16px;
 }
