--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,8 @@ h6 {
 }
 
 .header {
-    padding-top: 24px;
-    padding-left: 24px;
+    padding: 0 15px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
@@ -74,6 +74,7 @@ h6 {
 .header-navig {
     display: flex;
     flex-grow: 1;
+    align-items: center;
 }
 
 .header-menu {
@@ -81,6 +82,7 @@ h6 {
     min-width: 261px;
     margin-left: 76px;
     gap: 40px;
+    padding: 24px 0;
 }
 
 .header-menu-link {
