--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,7 @@ flex-direction: column;
 }
 
 .portfolio-list-name{
-    
+row-gap: 48px;
 }
 .portfolio-list-img{
     display: flex;
@@ -377,6 +377,11 @@ flex-direction: column;
     gap: 24px;
 }
 
+.container-name{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .portfolio-name {
     font-weight: 500;
     font-size: 20px;
